After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 694237 - actor: Fix clutter_actor_allocate_align_fill for partially-filled actors
actor: Fix clutter_actor_allocate_align_fill for partially-filled actors
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks: 694256
 
 
Reported: 2013-02-20 03:25 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2013-02-21 00:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
actor: Fix clutter_actor_allocate_align_fill for partially-filled actors (3.75 KB, patch)
2013-02-20 03:25 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2013-02-20 03:25:36 UTC
See patch. This came up while I was fixing some iconGrid stuff.
Comment 1 Jasper St. Pierre (not reading bugmail) 2013-02-20 03:25:38 UTC
Created attachment 236884 [details] [review]
actor: Fix clutter_actor_allocate_align_fill for partially-filled actors

If we pass TRUE for x_align and FALSE for y_align, the full available
width should be passed to clutter_get_preferred_height, and the same
should be true in the other dimension.
Comment 2 Emmanuele Bassi (:ebassi) 2013-02-21 00:30:15 UTC
Attachment 236884 [details] pushed as 50f6b2a - actor: Fix clutter_actor_allocate_align_fill for partially-filled actors